--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -1,7 +1,24 @@
 <a href="/users/new">Новый пользователь </a>
+<style>
+    table {
+        table-layout: fixed; /* Фиксированная ширина ячеек */
+        width: 50%; /* Ширина таблицы */
+    }
+</style>
+
 
 <?php foreach ($users as $user): ?>
-    <h3>
-        <?= htmlspecialchars($user->name) ?>  <?= htmlspecialchars($user->mail) ?>
-    </h3>
+<table>
+    <tr>
+        <td>
+            <?= htmlspecialchars($user->id) ?>
+        </td>
+        <td>
+            <?= htmlspecialchars($user->name) ?>
+        </td>
+        <td>
+            <?= htmlspecialchars($user->mail) ?>
+        </td>
+    </tr>
+</table>
 <?php endforeach ?>
