--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -5,7 +5,15 @@
         width: 50%; /* Ширина таблицы */
     }
 </style>
-
+<?php if (count($flash) > 0) : ?>
+    <ul>
+        <?php foreach ($flash as $messages) : ?>
+            <?php foreach ($messages as $message) : ?>
+                <li><?= $message ?></li>
+            <?php endforeach ?>
+        <?php endforeach ?>
+    </ul>
+<?php endif ?>
 
 <?php foreach ($users as $user): ?>
 <table>
