--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -1,1 +1,1 @@
-<h1>Hello, <?= htmlspecialchars($id) ?> ТЕБЯ ЗОВУТ <?= htmlspecialchars(strtoupper($nickname)) ?></h1>
+<h1>Hello, <?= htmlspecialchars($user->name) ?> адрес твоей почты: <?= htmlspecialchars($user->mail)?></h1>
