--- a/templates/users/New.phtml
+++ b/templates/users/New.phtml
@@ -4,18 +4,27 @@
             NickNAME -
             <input type="text" name="user[name]" value ="<?= htmlspecialchars($user['name']) ?>">
         </label>
+        <?php if (isset($errors['name'])): ?>
+            <div><?= $errors['name'] ?></div>
+        <?php endif ?>
     </div>
     <div>
         <label>
             @MAIL
             <input type="email" name="user[mail]" value ="<?= htmlspecialchars($user['mail']) ?>">
         </label>
+        <?php if (isset($errors['mail'])): ?>
+            <div><?= $errors['mail'] ?></div>
+        <?php endif ?>
     </div>
     <div>
         <label>
             #ID
             <input type="number" name="user[id]"  value ="<?= htmlspecialchars($user['id']) ?>" >
         </label>
+        <?php if (isset($errors['id'])): ?>
+            <div><?= $errors['id'] ?></div>
+        <?php endif ?>
     </div>
     <input type="submit" value="Create">
 </form>
